--- a/project/engine.cfg
+++ b/project/engine.cfg
@@ -1,12 +1,16 @@
 [application]
 
 name="LD39"
-main_scene="res://scenes/game_root.tscn"
+main_scene="res://scenes/menu.tscn"
 icon="res://icon.png"
 
 [autoload]
 
 global="*res://scripts/global.gd"
+
+[display]
+
+resizable=false
 
 [physics]
 
